# LYJY_MLSys

./: README.md
Basic MLSys Knowledge/Operator fusion/: Operator_fusion.py
Basic MLSys Knowledge/foo vs bar/: compare  compare.cpp
Basic MLSys Knowledge/gcc vs clang/: compare_matmul.cpp  gemm_clang  gemm_clang.s  gemm_clang1.s  gemm_gcc  gemm_gcc.s  gemm_gcc1.s  gemm_test.cpp
Basic MLSys Knowledge/gemm_in_cpu/: gemm_in_cpu  gemm_in_cpu.cpp
Basic MLSys Knowledge/opt_blur/: opt_blur  opt_blur.cpp
Basic System Knowledge/: MultiProcess.cpp  MultiThreading.cpp
Basic System Knowledge/LibtorchPractice/: CMakeLists.txt  main.cpp
Basic System Knowledge/NanobindPractice/: CMakeLists.txt
Basic System Knowledge/NanobindPractice/cpp/: cuckoo.cpp
Basic System Knowledge/NanobindPractice/python/: test.py
LLM Inference/: NSA.py
Parallel Computing/Gemm/: CMakeLists.txt  README.md  gemm.cu  gemm_test  profile.ncu-rep
Parallel Computing/task_cuda/: README.md  cuda.cu  pyproject.toml  setup.py  test_cuda.py
Parallel Computing/task_cuda/CUDA_Test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Parallel Computing/triton_puzzle/: puzzles.py
